# BetaTTY

./: CMakeLists.txt  README.md
src/: chat.cpp  chat.h  chunk.cpp  chunk.h  dataHandler.cpp  dataHandler.h  datatypes.h  defines.h  entity.h  enum.h  global.cpp  global.h  helper.cpp  helper.h  lut.cpp  lut.h  main.cpp  packet.cpp  packet.h  world.cpp  world.h
